bugfix(app) Remove float from related products only on mobile

--- a/client/assets/stylesheets/_related_products.sass
+++ b/client/assets/stylesheets/_related_products.sass
@@ -8,5 +8,8 @@
     margin-bottom: 25px
   h2
     background-image: img-url('icons/related.svg')
-  .product
-    float: none
+
+@media only screen and (max-width: $screen-sm-max)
+  .section.related-products
+    .product
+      float: none
